<?xml version="1.0" encoding="utf-8"?>
<!-- APP欢迎界面 -->
<!--
    主要内容:
    显示柳比歇夫时间管理原则
    进入APP按钮
    对应活动动作:
        点击按钮,进入主活动界面
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffc0a884">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#ff1ba400"
        android:text="@string/welcome_title"/>

    <TextView
        android:id="@+id/time_principle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp"
        android:text="@string/TIME_PRINCIPLE1"/>

    <TextView
        android:id="@+id/time_principle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp"
        android:text="@string/TIME_PRINCIPLE2"/>

    <TextView
        android:id="@+id/time_principle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp"
        android:text="@string/TIME_PRINCIPLE3"/>

    <TextView
        android:id="@+id/time_principle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp"
        android:text="@string/TIME_PRINCIPLE4"/>

    <TextView
        android:id="@+id/time_principle5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="80dp"
        android:paddingStart="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:textSize="20sp"
        android:text="@string/TIME_PRINCIPLE5"/>

    <Button
        android:id="@+id/click_to_main"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/TO_MAIN"
        />
</LinearLayout>
